tightened up some more vertical space. Made announcement go behind RES login menu. Fixes #19.

--- a/css/announcements.css
+++ b/css/announcements.css
@@ -9,7 +9,7 @@
 /** +++ ANNOUNCE STARTS +++ **/
 
 div.content {
-  margin-top:25px;
+  margin-top:0px;
 }
 .titlebox form{
   position: static;
@@ -17,7 +17,7 @@ div.content {
 .side .usertext h3{
   position:absolute;
   display: block;
-  top:-172px;
+  top:-145px;
   left:10px;
   color: #000;
   text-align: left;
@@ -27,7 +27,7 @@ div.content {
   height:74px;
   font-weight: normal;
   padding: 37px 20px 8px 78px;
-  z-index:9999;
+  z-index:666; /* hail satan*/
   background:url('../images/announcehead.png');
   background-repeat:no-repeat;
   color:#B39265;
