--- a/css/threads.css
+++ b/css/threads.css
@@ -3,7 +3,7 @@
  */
 
 #siteTable {
-  margin-top: 40px; /* Keeps us lined up with the sidebar header */
+  margin-top: 10px; /* Keeps us lined up with the sidebar header */
 }
 
 #siteTable .thing {
